--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TareaDePOO
 excludes=
 file.reference.flatlaf-3.5.4.jar=library\\flatlaf-3.5.4.jar
+file.reference.json-20250107.jar=library\\json-20250107.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-3.5.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.json-20250107.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
