--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,14 +38,14 @@ excludes=
 file.reference.flatlaf-3.5.4.jar=library\\flatlaf-3.5.4.jar
 file.reference.json-20250107.jar=library\\json-20250107.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.flatlaf-3.5.4.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.json-20250107.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
