--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,14 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.4.jar=library\\flatlaf-3.5.4.jar
 file.reference.json-20250107.jar=library\\json-20250107.jar
+file.reference.mssql-jdbc-12.8.1.jre8.jar=library\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.flatlaf-3.5.4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.json-20250107.jar}
+    ${file.reference.json-20250107.jar}:\
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
