Generar reporte de alumnos/docentes y guardarlo en un pdf

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/TareaDePOO
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.4.jar=library\\flatlaf-3.5.4.jar
+file.reference.itextpdf-5.5.13.4.jar=library\\itextpdf-5.5.13.4.jar
 file.reference.json-20250107.jar=library\\json-20250107.jar
 file.reference.mssql-jdbc-12.8.1.jre8.jar=library\\mssql-jdbc-12.8.1.jre8.jar
 includes=**
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.flatlaf-3.5.4.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.json-20250107.jar}:\
-    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre8.jar}:\
+    ${file.reference.itextpdf-5.5.13.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
